changed the jtinder overflow issue, and added basic template to other html files

--- a/public/assets/css/jTinder.css
+++ b/public/assets/css/jTinder.css
@@ -5,9 +5,9 @@ html, body {
     position: relative;
 }
 
-body {
+/*body {
     overflow: hidden;
-}
+}*/
 
 /* Wrapper with padding */
 .wrap  {
